--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -6,17 +6,18 @@
     "id": "9hRpsy5Zp8Lr"
    },
    "source": [
-    "\n",
     "## <font color=red> You should not import any new libraries. Your code should run with python=3.x</font>\n",
     "\n",
     "- Your solutions will be auto-graded. Hence we request you to follow the instructions.\n",
-    "- Modify the code only between \n",
+    "- Modify the code only between\n",
+    "\n",
     "```\n",
     "## TODO\n",
     "## END TODO\n",
     "```\n",
+    "\n",
     "- In addition to above changes, you can play with arguments to the functions for generating plots\n",
-    "- We will run the auto grading scripts with private test data"
+    "- We will run the auto grading scripts with private test data\n"
    ]
   },
   {
@@ -29,7 +30,7 @@
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "import math"
+    "import math\n"
    ]
   },
   {
@@ -38,7 +39,7 @@
     "id": "BiGi8JNJzN_f"
    },
    "source": [
-    "# KMeans Algorithm"
+    "# KMeans Algorithm\n"
    ]
   },
   {
@@ -68,36 +69,41 @@
     "        self.n_clusters = n_clusters\n",
     "        self.random_state = random_state\n",
     "\n",
-    "    \n",
+    "\n",
     "    def fit(self, X):\n",
     "        \"\"\"\n",
     "        Implement of kMeans algorithm and stores cluster centers as class object\n",
     "\n",
     "        Args:\n",
     "        X : numpy array of shape (n_samples, 2)\n",
-    "        \n",
+    "\n",
     "        Returns:\n",
     "        Nothing\n",
     "        \"\"\"\n",
+    "\n",
     "        ## TODO\n",
     "\n",
     "        ## END TODO\n",
-    "    \n",
+    "        pass\n",
+    "\n",
+    "\n",
     "    def predict(self, X):\n",
     "        \"\"\"\n",
-    "        Uses the stored cluster centers from fit to predict labels. \n",
+    "        Uses the stored cluster centers from fit to predict labels.\n",
     "        Args:\n",
     "        X : numpy array of shape (n_samples, 2)\n",
-    "        \n",
+    "\n",
     "        Returns:\n",
     "        Y: Labels for each of the data point in X. np\n",
     "        \"\"\"\n",
+    "\n",
     "        Y = None\n",
     "        ## TODO\n",
     "\n",
     "        ## END TODO\n",
+    "\n",
     "        assert Y.shape == (X.shape[0],), \"Return Y in expected format\"\n",
-    "        return Y"
+    "        return Y\n"
    ]
   },
   {
@@ -106,7 +112,7 @@
     "id": "kxgQgosmYXRu"
    },
    "source": [
-    "## LOAD DATA 1"
+    "## LOAD DATA 1\n"
    ]
   },
   {
@@ -133,17 +139,17 @@
    },
    "outputs": [],
    "source": [
-    "X = np.load('./data/train_X_1.npy')\n",
-    "Y = np.array([np.load('./data/train_Y_1.npy')]).T\n",
+    "X = np.load(\"./data/train_X_1.npy\")\n",
+    "Y = np.array([np.load(\"./data/train_Y_1.npy\")]).T\n",
     "Y = np.squeeze(Y)\n",
     "\n",
-    "plt.scatter(X[:,0],X[:,1],c=Y)\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=Y)\n",
     "plt.figure()\n",
     "\n",
-    "km = Kmeans(4,123)\n",
+    "km = Kmeans(4, 123)\n",
     "km.fit(X)\n",
     "y_pred = km.predict(X)\n",
-    "plt.scatter(X[:,0],X[:,1],c=y_pred)"
+    "plt.scatter(X[:, 0], X[:, 1], c=y_pred)\n"
    ]
   },
   {
@@ -152,7 +158,7 @@
     "id": "WD0FOeS0JTk9"
    },
    "source": [
-    "## LOAD DATA 2"
+    "## LOAD DATA 2\n"
    ]
   },
   {
@@ -163,17 +169,17 @@
    },
    "outputs": [],
    "source": [
-    "X = np.load('./data/train_X_2.npy')\n",
-    "Y = np.array([np.load('./data/train_Y_2.npy')]).T\n",
+    "X = np.load(\"./data/train_X_2.npy\")\n",
+    "Y = np.array([np.load(\"./data/train_Y_2.npy\")]).T\n",
     "Y = np.squeeze(Y)\n",
     "\n",
-    "plt.scatter(X[:,0],X[:,1],c=Y)\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=Y)\n",
     "plt.figure()\n",
     "\n",
-    "km = Kmeans(2,123)\n",
+    "km = Kmeans(2, 123)\n",
     "km.fit(X)\n",
     "y_pred = km.predict(X)\n",
-    "plt.scatter(X[:,0],X[:,1],c=y_pred)"
+    "plt.scatter(X[:, 0], X[:, 1], c=y_pred)\n"
    ]
   },
   {
@@ -182,7 +188,7 @@
     "id": "vxJ31SFSJmuF"
    },
    "source": [
-    "## LOAD DATA 3"
+    "## LOAD DATA 3\n"
    ]
   },
   {
@@ -193,17 +199,17 @@
    },
    "outputs": [],
    "source": [
-    "X = np.load('./data/train_X_3.npy')\n",
-    "Y = np.array([np.load('./data/train_Y_3.npy')]).T\n",
+    "X = np.load(\"./data/train_X_3.npy\")\n",
+    "Y = np.array([np.load(\"./data/train_Y_3.npy\")]).T\n",
     "Y = np.squeeze(Y)\n",
     "\n",
-    "plt.scatter(X[:,0],X[:,1],c=Y)\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=Y)\n",
     "plt.figure()\n",
     "\n",
-    "km = Kmeans(2,123)\n",
+    "km = Kmeans(2, 123)\n",
     "km.fit(X)\n",
     "y_pred = km.predict(X)\n",
-    "plt.scatter(X[:,0],X[:,1],c=y_pred)"
+    "plt.scatter(X[:, 0], X[:, 1], c=y_pred)\n"
    ]
   },
   {
@@ -212,7 +218,7 @@
     "id": "BMnG8ZjldAuq"
    },
    "source": [
-    "# Simple Kernel Design"
+    "# Simple Kernel Design\n"
    ]
   },
   {
@@ -227,12 +233,12 @@
     "    \"\"\"\n",
     "    Implementing Kmeans algorithm.\n",
     "\n",
-    "    You may choose to define additional helper function within this class, however don't change the protype of `fit` and `predict` classes.   \n",
+    "    You may choose to define additional helper function within this class, however don't change the protype of `fit` and `predict` classes.\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, n_clusters, random_state):\n",
     "        \"\"\"\n",
-    "        Implement of kMeans algorithm \n",
+    "        Implement of kMeans algorithm\n",
     "\n",
     "        Args:\n",
     "        n_clusters: int - no. of clusters\n",
@@ -242,60 +248,69 @@
     "        self.n_clusters = n_clusters\n",
     "        self.random_state = random_state\n",
     "\n",
+    "\n",
     "    def make_zero_centered(self, X):\n",
     "        \"\"\"\n",
     "        Returns a zero-centered concentric circles Dataset\n",
     "\n",
     "        Args:\n",
     "        X : numpy array of shape (n_samples, 2)\n",
-    "        \n",
+    "\n",
     "        Returns:\n",
     "        X : numpy array of shape (n_samples, 2)\n",
     "        \"\"\"\n",
+    "\n",
     "        ## TODO\n",
+    "\n",
     "        ## END TODO\n",
     "\n",
     "        return X\n",
     "\n",
-    "    \n",
+    "\n",
     "    def fit(self, X):\n",
     "        \"\"\"\n",
     "        Implement of kMeans algorithm along with using a suitable kernel and stores cluster centers as class object\n",
     "\n",
     "        Args:\n",
     "        X : numpy array of shape (n_samples, 2)\n",
-    "        \n",
+    "\n",
     "        Returns:\n",
     "        Nothing\n",
     "        \"\"\"\n",
+    "\n",
     "        ## TODO\n",
     "\n",
     "        ## END TODO\n",
-    "    \n",
+    "        pass\n",
+    "\n",
+    "\n",
     "    def predict(self, X):\n",
     "        \"\"\"\n",
-    "        Uses the stored cluster centers from fit to predict labels using the kernel. \n",
+    "        Uses the stored cluster centers from fit to predict labels using the kernel.\n",
     "        Args:\n",
     "        X : numpy array of shape (n_samples, 2)\n",
-    "        \n",
+    "\n",
     "        Returns:\n",
     "        Y: Labels for each of the data point in X.\n",
     "        \"\"\"\n",
+    "\n",
     "        ## TODO\n",
     "\n",
     "        ## END TODO\n",
+    "        pass\n",
     "\n",
-    "X = np.load('./data/train_X_3.npy')\n",
-    "Y = np.array([np.load('./data/train_Y_3.npy')]).T\n",
+    "\n",
+    "X = np.load(\"./data/train_X_3.npy\")\n",
+    "Y = np.array([np.load(\"./data/train_Y_3.npy\")]).T\n",
     "Y = np.squeeze(Y)\n",
     "\n",
-    "plt.scatter(X[:,0],X[:,1],c=Y)\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=Y)\n",
     "plt.figure()\n",
     "\n",
-    "km = Kmeans_Kernel(2,123)\n",
+    "km = Kmeans_Kernel(2, 123)\n",
     "km.fit(X)\n",
     "y_pred = km.predict(X)\n",
-    "plt.scatter(X[:,0],X[:,1],c=y_pred)"
+    "plt.scatter(X[:, 0], X[:, 1], c=y_pred)\n"
    ]
   },
   {
@@ -304,7 +319,7 @@
     "id": "_rlI-i6fafNu"
    },
    "source": [
-    "# Kernelized classification"
+    "# Kernelized classification\n"
    ]
   },
   {
@@ -313,7 +328,7 @@
     "id": "X3zXb6xqaifk"
    },
    "source": [
-    "## 3 a) Gram Matrix"
+    "## 3 a) Gram Matrix\n"
    ]
   },
   {
@@ -324,35 +339,38 @@
    },
    "outputs": [],
    "source": [
-    "def linear_kernel(X,Y,sigma=None):\n",
-    "\t'''Returns the gram matrix for a linear kernel\n",
-    "\t\n",
-    "\tArguments:\n",
-    "\t\tX - numpy array of size n x d\n",
-    "\t\tY - numpy array of size m x d\n",
-    "\t\tsigma - dummy argment, don't use\n",
-    "\tReturn:\n",
-    "\t\tK - numpy array of size n x m\n",
-    "\t''' \n",
-    "\t# TODO \n",
-    "\t# NOTE THAT YOU CANNOT USE FOR LOOPS HERE\n",
-    "\tpass\n",
-    "\t# END TODO\n",
+    "def linear_kernel(X, Y, sigma=None):\n",
+    "    \"\"\"Returns the gram matrix for a linear kernel\n",
     "\n",
-    "def gaussian_kernel(X,Y,sigma=0.1):\n",
-    "\t'''Returns the gram matrix for a rbf\n",
-    "\t\n",
-    "\tArguments:\n",
-    "\t\tX - numpy array of size n x d\n",
-    "\t\tY - numpy array of size m x d\n",
-    "\t\tsigma - The sigma value for kernel\n",
-    "\tReturn:\n",
-    "\t\tK - numpy array of size n x m\n",
-    "\t'''\n",
-    "\t# TODO\n",
-    "\t# NOTE THAT YOU CANNOT USE FOR LOOPS HERE \n",
-    "\tpass\n",
-    "\t# END TODO"
+    "    Arguments:\n",
+    "            X - numpy array of size n x d\n",
+    "            Y - numpy array of size m x d\n",
+    "            sigma - dummy argument, don't use\n",
+    "    Return:\n",
+    "            K - numpy array of size n x m\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # TODO\n",
+    "    # NOTE THAT YOU CANNOT USE FOR LOOPS HERE\n",
+    "    pass\n",
+    "    # END TODO\n",
+    "\n",
+    "\n",
+    "def gaussian_kernel(X, Y, sigma=0.1):\n",
+    "    \"\"\"Returns the gram matrix for a rbf\n",
+    "\n",
+    "    Arguments:\n",
+    "            X - numpy array of size n x d\n",
+    "            Y - numpy array of size m x d\n",
+    "            sigma - The sigma value for kernel\n",
+    "    Return:\n",
+    "            K - numpy array of size n x m\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # TODO\n",
+    "    # NOTE THAT YOU CANNOT USE FOR LOOPS HERE\n",
+    "    pass\n",
+    "    # END TODO\n"
    ]
   },
   {
@@ -361,7 +379,7 @@
     "id": "Udybw5lZbOeG"
    },
    "source": [
-    "## 3 b) Kernel Logistic Regression"
+    "## 3 b) Kernel Logistic Regression\n"
    ]
   },
   {
@@ -380,6 +398,7 @@
     "        self.eta = eta     # Step size for gradient descent\n",
     "        self.lamda = lamda # Regularization term\n",
     "\n",
+    "\n",
     "    def fit(self, X, y):\n",
     "        ''' find the alpha values here'''\n",
     "        self.train_X = X\n",
@@ -390,33 +409,37 @@
     "        # TODO\n",
     "\n",
     "        # END TODO\n",
-    "    \n",
+    "\n",
     "\n",
     "    def predict(self, X):\n",
-    "        # TODO \n",
+    "        # TODO\n",
     "\n",
     "        # END TODO\n",
+    "        pass\n",
     "\n",
-    "def k_fold_cv(X,y,k=10,sigma=1.0):\n",
-    "    '''Does k-fold cross validation given train set (X, y)\n",
-    "    Divide train set into k subsets, and train on (k-1) while testing on 1. \n",
+    "\n",
+    "def k_fold_cv(X, y, k=10, sigma=1.0):\n",
+    "    '''\n",
+    "    Does k-fold cross validation given train set (X, y)\n",
+    "    Divide train set into k subsets, and train on (k-1) while testing on 1.\n",
     "    Do this process k times.\n",
-    "    Do Not randomize \n",
-    "    \n",
+    "    Do Not randomize\n",
+    "\n",
     "    Arguments:\n",
     "        X  -- Train set\n",
     "        y  -- Train set labels\n",
-    "    \n",
+    "\n",
     "    Keyword Arguments:\n",
     "        k {number} -- k for the evaluation\n",
     "        sigma {number} -- parameter for gaussian kernel\n",
-    "    \n",
+    "\n",
     "    Returns:\n",
     "        error -- (sum of total mistakes for each fold)/(k)\n",
     "    '''\n",
-    "    # TODO \n",
+    "    # TODO\n",
     "\n",
-    "    # END TODO"
+    "    # END TODO\n",
+    "    pass\n"
    ]
   },
   {
@@ -425,7 +448,7 @@
     "id": "F1MmFinpnxfi"
    },
    "source": [
-    "## K fold runs"
+    "## K fold runs\n"
    ]
   },
   {
@@ -436,8 +459,8 @@
    },
    "outputs": [],
    "source": [
-    "X1 = np.load('./data/train_X_3.npy')\n",
-    "Y1 = np.array([np.load('./data/train_Y_3.npy')]).T\n",
+    "X1 = np.load(\"./data/train_X_3.npy\")\n",
+    "Y1 = np.array([np.load(\"./data/train_Y_3.npy\")]).T\n",
     "Y1 = np.squeeze(Y1)\n",
     "\n",
     "clf = KernelLogistic(gaussian_kernel)\n",
@@ -450,14 +473,21 @@
     "\n",
     "errs = []\n",
     "sigmas = [0.5, 1, 2, 3, 4, 5, 6]\n",
-    "for s in sigmas:  \n",
-    "    errs+=[(k_fold_cv(X1,Y1,sigma=s))]\n",
-    "plt.plot(sigmas,errs)\n",
-    "plt.xlabel('Sigma')\n",
-    "plt.ylabel('Mistakes')\n",
-    "plt.title('A plot of sigma v/s mistakes')\n",
-    "plt.show()"
+    "for s in sigmas:\n",
+    "    errs += [(k_fold_cv(X1, Y1, sigma=s))]\n",
+    "plt.plot(sigmas, errs)\n",
+    "plt.xlabel(\"Sigma\")\n",
+    "plt.ylabel(\"Mistakes\")\n",
+    "plt.title(\"A plot of sigma v/s mistakes\")\n",
+    "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -466,8 +496,11 @@
    "name": "assignment_4.ipynb",
    "provenance": []
   },
+  "interpreter": {
+   "hash": "aea86b65f3ce5091a535cd6a4329dd553b3d175d52cb47abc7b8a422461c3cbe"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -481,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
