Added Sections and started Section 2

--- a/report/answers.tex
+++ b/report/answers.tex
@@ -12,7 +12,7 @@
 \usepackage{graphicx}
 \usepackage[export]{adjustbox}
 \usepackage{sectsty}
-\renewcommand{\thesubsubsection}{(\alph{subsubsection})}
+\renewcommand{\thesubsubsection}{(\roman{subsubsection})}
 
 \usepackage[dvipsnames]{xcolor}
 \usepackage[perpage]{footmisc}
@@ -43,6 +43,21 @@
 \setcounter{page}{0}
 
 \newpage
-~
+\section{Clustering}
+\subsection{CS 335 KMeans Implementation}
+
+
+
+\newpage
+\section{Kernel design and Kernelized clustering}
+\subsection{CS 337: Proving kernel validity}
+
+
+\subsection{CS 337: Simple Kernel Design}
+\subsubsection{}
+
+\subsubsection{}
+
+
 
 \end{document}
