Finished predict of Kmeans

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -94,14 +94,17 @@
     "        X : numpy array of shape (n_samples, 2)\n",
     "\n",
     "        Returns:\n",
-    "        Y: Labels for each of the data point in X. np\n",
+    "        Y : numpy array of shape (n_samples, ) - labels for each of the data point in X\n",
     "        \"\"\"\n",
-    "\n",
-    "        Y = None\n",
+    "        \n",
     "        ## TODO\n",
-    "\n",
+    "        diff = np.repeat(X.reshape((X.shape[0], 1, 2)), self.n_clusters, axis=1) \\\n",
+    "            - self.centroids.reshape(1, self.n_clusters, 2)\n",
+    "        dist = np.sum(diff**2, axis=2)\n",
+    "        Y = np.argmin(dist, axis=1)\n",
+    "        \n",
     "        ## END TODO\n",
-    "\n",
+    "        \n",
     "        assert Y.shape == (X.shape[0],), \"Return Y in expected format\"\n",
     "        return Y\n"
    ]
