--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -82,9 +82,24 @@
     "        \"\"\"\n",
     "\n",
     "        ## TODO\n",
+    "        n_samples = X.shape[0]\n",
+    "        np.random.seed(self.random_state)\n",
+    "        self.centroids = np.array(X[np.random.choice(n_samples, self.n_clusters, replace=False)])\n",
+    "        Y = np.zeros((n_samples, ))\n",
+    "        \n",
+    "        for i in range(100):\n",
+    "            new_Y = self.predict(X)\n",
+    "\n",
+    "            if (new_Y == Y).all():\n",
+    "                break\n",
+    "\n",
+    "            Y = new_Y\n",
+    "            for k in range(n_samples):\n",
+    "                temp = X[Y==k]\n",
+    "                if len(temp):\n",
+    "                    self.centroids[k] = np.mean(X[Y==k], axis=0)\n",
     "\n",
     "        ## END TODO\n",
-    "        pass\n",
     "\n",
     "\n",
     "    def predict(self, X):\n",
