Finished class Kmeans

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -54,16 +54,16 @@
     "    \"\"\"\n",
     "    Implementing Kmeans algorithm.\n",
     "\n",
-    "    You may choose to define additional helper function within this class, however don't change the protype of `fit` and `predict` classes.   \n",
+    "    You may choose to define additional helper function within this class, however don't change the prototype of `fit` and `predict` classes.   \n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, n_clusters, random_state):\n",
     "        \"\"\"\n",
-    "        Implement of kMeans algorithm\n",
+    "        Implement of KMeans algorithm\n",
     "\n",
     "        Args:\n",
-    "        n_clusters: int - no. of clusters\n",
-    "        random_state: int - changing this should change initial cluster centers\n",
+    "        n_clusters   : int - no. of clusters\n",
+    "        random_state : int - changing this should change initial cluster centers\n",
     "        \"\"\"\n",
     "\n",
     "        self.n_clusters = n_clusters\n",
@@ -72,7 +72,7 @@
     "\n",
     "    def fit(self, X):\n",
     "        \"\"\"\n",
-    "        Implement of kMeans algorithm and stores cluster centers as class object\n",
+    "        Implement of KMeans algorithm and stores cluster centers as class object\n",
     "\n",
     "        Args:\n",
     "        X : numpy array of shape (n_samples, 2)\n",
@@ -279,7 +279,8 @@
     "        \"\"\"\n",
     "\n",
     "        ## TODO\n",
-    "\n",
+    "        X = X - X.mean()\n",
+    "        \n",
     "        ## END TODO\n",
     "\n",
     "        return X\n",
@@ -305,11 +306,12 @@
     "    def predict(self, X):\n",
     "        \"\"\"\n",
     "        Uses the stored cluster centers from fit to predict labels using the kernel.\n",
+    "  \n",
     "        Args:\n",
     "        X : numpy array of shape (n_samples, 2)\n",
     "\n",
     "        Returns:\n",
-    "        Y: Labels for each of the data point in X.\n",
+    "        Y : Labels for each of the data point in X.\n",
     "        \"\"\"\n",
     "\n",
     "        ## TODO\n",
