Added helper distance function in class Kmeans

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -113,15 +113,18 @@
     "        \"\"\"\n",
     "        \n",
     "        ## TODO\n",
-    "        diff = np.repeat(X.reshape((X.shape[0], 1, 2)), self.n_clusters, axis=1) \\\n",
-    "            - self.centroids.reshape(1, self.n_clusters, 2)\n",
-    "        dist = np.sum(diff**2, axis=2)\n",
-    "        Y = np.argmin(dist, axis=1)\n",
+    "        Y = np.argmin(self.distance(X), axis=1)\n",
     "        \n",
     "        ## END TODO\n",
     "        \n",
     "        assert Y.shape == (X.shape[0],), \"Return Y in expected format\"\n",
-    "        return Y\n"
+    "        return Y\n",
+    "    \n",
+    "\n",
+    "    def distance(self, X):\n",
+    "        diff = np.repeat(X.reshape((X.shape[0], 1, 2)), self.n_clusters, axis=1) \\\n",
+    "            - self.centroids.reshape(1, self.n_clusters, 2)\n",
+    "        return np.sum(diff**2, axis=2)\n"
    ]
   },
   {
