Added distance function in class Kmeans_Kernel

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -320,7 +320,13 @@
     "        ## TODO\n",
     "\n",
     "        ## END TODO\n",
-    "        pass\n",
+    "    \n",
+    "\n",
+    "    def distance(self, X):\n",
+    "        X_ = np.repeat(X.reshape((X.shape[0], 1, 2)), self.n_clusters, axis=1)\n",
+    "        phi_X = np.sqrt(np.sum(X_**2, axis=2))\n",
+    "        \n",
+    "        return phi_X**2 + self.phi_centroids**2 - 2*np.multiply(phi_X, self.phi_centroids)\n",
     "\n",
     "\n",
     "X = np.load(\"./data/train_X_3.npy\")\n",
