Finished make_zero_centered of Kmeans_Kernel

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -282,7 +282,8 @@
     "        \"\"\"\n",
     "\n",
     "        ## TODO\n",
-    "        X = X - X.mean()\n",
+    "        self.center = X.mean()\n",
+    "        X = np.array(X - X.mean())\n",
     "        \n",
     "        ## END TODO\n",
     "\n",
