Finished predict of Kmeans_Kernel

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -319,8 +319,13 @@
     "        \"\"\"\n",
     "\n",
     "        ## TODO\n",
+    "        X = np.array(X - self.center)\n",
+    "        Y = np.argmin(self.distance(X), axis=1)\n",
     "\n",
     "        ## END TODO\n",
+    "\n",
+    "        assert Y.shape == (X.shape[0],), \"Return Y in expected format\"\n",
+    "        return Y\n",
     "    \n",
     "\n",
     "    def distance(self, X):\n",
