Finished fit of Kmeans_Kernel

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -302,9 +302,26 @@
     "        \"\"\"\n",
     "\n",
     "        ## TODO\n",
+    "        X = self.make_zero_centered(X)\n",
+    "        n_samples = X.shape[0]\n",
+    "        np.random.seed(self.random_state)\n",
+    "        phi = np.sqrt(np.sum(X**2, axis=1))\n",
+    "        self.phi_centroids = np.array(phi[np.random.choice(n_samples, self.n_clusters, replace=False)])\n",
+    "        Y = np.zeros((n_samples, ))\n",
+    "        \n",
+    "        for i in range(100):\n",
+    "            new_Y = self.predict(X)\n",
     "\n",
+    "            if (new_Y == Y).all():\n",
+    "                break\n",
+    "\n",
+    "            Y = new_Y\n",
+    "            for k in range(n_samples):\n",
+    "                temp = X[Y==k]\n",
+    "                if len(temp):\n",
+    "                    self.phi_centroids[k] = np.mean(phi[Y==k], axis=0)\n",
+    "        \n",
     "        ## END TODO\n",
-    "        pass\n",
     "\n",
     "\n",
     "    def predict(self, X):\n",
