Finished class Kmeans_Kernel and tested

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -353,6 +353,7 @@
     "\n",
     "\n",
     "X = np.load(\"./data/train_X_3.npy\")\n",
+    "X = X + np.ones_like(X)*0.5\n",
     "Y = np.array([np.load(\"./data/train_Y_3.npy\")]).T\n",
     "Y = np.squeeze(Y)\n",
     "\n",
