Added new cells for testing Kernel Kmeans

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -348,12 +348,44 @@
     "    def distance(self, X):\n",
     "        X_ = np.repeat(X.reshape((X.shape[0], 1, 2)), self.n_clusters, axis=1)\n",
     "        phi_X = np.sqrt(np.sum(X_**2, axis=2))\n",
-    "        \n",
-    "        return phi_X**2 + self.phi_centroids**2 - 2*np.multiply(phi_X, self.phi_centroids)\n",
     "\n",
-    "\n",
+    "        return phi_X**2 + self.phi_centroids**2 - 2*np.multiply(phi_X, self.phi_centroids)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LOAD DATA 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X = np.load(\"./data/train_X_3.npy\")\n",
-    "X = X + np.ones_like(X)*0.5\n",
+    "Y = np.array([np.load(\"./data/train_Y_3.npy\")]).T\n",
+    "Y = np.squeeze(Y)\n",
+    "\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=Y)\n",
+    "plt.figure()\n",
+    "\n",
+    "km = Kmeans_Kernel(2, 123)\n",
+    "km.fit(X)\n",
+    "y_pred = km.predict(X)\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.load(\"./data/train_X_3.npy\")\n",
+    "X = X + np.ones_like(X)*5\n",
     "Y = np.array([np.load(\"./data/train_Y_3.npy\")]).T\n",
     "Y = np.squeeze(Y)\n",
     "\n",
