Fixed comments and spacing

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -86,7 +86,7 @@
     "        np.random.seed(self.random_state)\n",
     "        self.centroids = np.array(X[np.random.choice(n_samples, self.n_clusters, replace=False)])\n",
     "        Y = np.zeros((n_samples, ))\n",
-    "        \n",
+    "\n",
     "        for i in range(100):\n",
     "            new_Y = self.predict(X)\n",
     "\n",
@@ -111,15 +111,15 @@
     "        Returns:\n",
     "        Y : numpy array of shape (n_samples, ) - labels for each of the data point in X\n",
     "        \"\"\"\n",
-    "        \n",
+    "\n",
     "        ## TODO\n",
     "        Y = np.argmin(self.distance(X), axis=1)\n",
-    "        \n",
+    "\n",
     "        ## END TODO\n",
-    "        \n",
+    "\n",
     "        assert Y.shape == (X.shape[0],), \"Return Y in expected format\"\n",
     "        return Y\n",
-    "    \n",
+    "\n",
     "\n",
     "    def distance(self, X):\n",
     "        diff = np.repeat(X.reshape((X.shape[0], 1, 2)), self.n_clusters, axis=1) \\\n",
@@ -284,7 +284,7 @@
     "        ## TODO\n",
     "        self.center = X.mean()\n",
     "        X = np.array(X - X.mean())\n",
-    "        \n",
+    "\n",
     "        ## END TODO\n",
     "\n",
     "        return X\n",
@@ -308,7 +308,7 @@
     "        phi = np.sqrt(np.sum(X**2, axis=1))\n",
     "        self.phi_centroids = np.array(phi[np.random.choice(n_samples, self.n_clusters, replace=False)])\n",
     "        Y = np.zeros((n_samples, ))\n",
-    "        \n",
+    "\n",
     "        for i in range(100):\n",
     "            new_Y = self.predict(X)\n",
     "\n",
@@ -320,19 +320,19 @@
     "                temp = X[Y==k]\n",
     "                if len(temp):\n",
     "                    self.phi_centroids[k] = np.mean(phi[Y==k], axis=0)\n",
-    "        \n",
+    "\n",
     "        ## END TODO\n",
     "\n",
     "\n",
     "    def predict(self, X):\n",
     "        \"\"\"\n",
     "        Uses the stored cluster centers from fit to predict labels using the kernel.\n",
-    "  \n",
+    "\n",
     "        Args:\n",
     "        X : numpy array of shape (n_samples, 2)\n",
     "\n",
     "        Returns:\n",
-    "        Y : Labels for each of the data point in X.\n",
+    "        Y : numpy array of shape (n_samples, ) - labels for each of the data point in X.\n",
     "        \"\"\"\n",
     "\n",
     "        ## TODO\n",
@@ -343,9 +343,18 @@
     "\n",
     "        assert Y.shape == (X.shape[0],), \"Return Y in expected format\"\n",
     "        return Y\n",
-    "    \n",
+    "\n",
     "\n",
     "    def distance(self, X):\n",
+    "        \"\"\"\n",
+    "        Computes distance in phi space.\n",
+    "\n",
+    "        Args:\n",
+    "        X : numpy array of shape (n_samples, 2)\n",
+    "\n",
+    "        Returns:\n",
+    "        Y : numpy array of shape (n_samples, n_clusters) - distance of every point from cluster centers \n",
+    "        \"\"\"\n",
     "        X_ = np.repeat(X.reshape((X.shape[0], 1, 2)), self.n_clusters, axis=1)\n",
     "        phi_X = np.sqrt(np.sum(X_**2, axis=2))\n",
     "\n",
