Updated distance function in class Kmeans_Kernel

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -362,12 +362,14 @@
     "        X : numpy array of shape (n_samples, 2)\n",
     "\n",
     "        Returns:\n",
-    "        Y : numpy array of shape (n_samples, n_clusters) - distance of every point from cluster centers \n",
+    "        Y : numpy array of shape (n_samples, n_clusters) - distance of every point from cluster centers in phi space\n",
     "        \"\"\"\n",
+    "        \n",
     "        X_ = np.repeat(X.reshape((X.shape[0], 1, 2)), self.n_clusters, axis=1)\n",
-    "        phi_X = np.sqrt(np.sum(X_**2, axis=2))\n",
+    "        phi_X = np.repeat(np.sqrt(np.sum(X**2, axis=1)).reshape((X.shape[0], 1)), self.n_clusters, axis=1)\n",
+    "        phi_centroids = np.sqrt(np.sum(self.centroids**2, axis=1)).reshape((1, self.n_clusters))\n",
     "\n",
-    "        return phi_X**2 + self.phi_centroids**2 - 2*np.multiply(phi_X, self.phi_centroids)\n"
+    "        return phi_X**2 + phi_centroids**2 - 2*np.multiply(phi_X, phi_centroids)\n"
    ]
   },
   {
