Updated fit of Kmeans_Kernel -  means not phis

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -315,7 +315,7 @@
     "        n_samples = X.shape[0]\n",
     "        np.random.seed(self.random_state)\n",
     "        phi = np.sqrt(np.sum(X**2, axis=1))\n",
-    "        self.phi_centroids = np.array(phi[np.random.choice(n_samples, self.n_clusters, replace=False)])\n",
+    "        self.centroids = X[np.array(np.random.choice(n_samples, self.n_clusters, replace=False))]\n",
     "        Y = np.zeros((n_samples, ))\n",
     "\n",
     "        for i in range(100):\n",
@@ -328,7 +328,8 @@
     "            for k in range(n_samples):\n",
     "                temp = X[Y==k]\n",
     "                if len(temp):\n",
-    "                    self.phi_centroids[k] = np.mean(phi[Y==k], axis=0)\n",
+    "                    self.centroids[k][0] = np.mean(phi[Y==k], axis=0)\n",
+    "                    self.centroids[k][1] = 0\n",
     "\n",
     "        ## END TODO\n",
     "\n",
