Fixed comments and spacing

--- a/work/assignment_4.ipynb
+++ b/work/assignment_4.ipynb
@@ -131,6 +131,16 @@
     "\n",
     "\n",
     "    def distance(self, X):\n",
+    "        \"\"\"\n",
+    "        Computes distance in phi space.\n",
+    "\n",
+    "        Args:\n",
+    "        X : numpy array of shape (n_samples, 2)\n",
+    "\n",
+    "        Returns:\n",
+    "        Y : numpy array of shape (n_samples, n_clusters) - distance of every point from cluster centers \n",
+    "        \"\"\"\n",
+    "        \n",
     "        diff = np.repeat(X.reshape((X.shape[0], 1, 2)), self.n_clusters, axis=1) \\\n",
     "            - self.centroids.reshape(1, self.n_clusters, 2)\n",
     "        return np.sum(diff**2, axis=2)\n"
